fix the navigation bar didn't show and clean up the config file, thanks Michael

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -53,6 +53,4 @@
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
 
 <link rel="stylesheet" href="/assets/awesome/css/font-awesome.min.css">
- <!--
-<link rel="stylesheet" href="http://apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css">
-->
+<!-- <link rel="stylesheet" href="http://apps.bdimg.com/libs/fontawesome/4.2.0/css/font-awesome.min.css"> -->
