update reading time support

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@
 {% if site.readtime %}
   {% for post in site.posts %}
     {% if site.wpm %}
-      {% ASSIGN readtime = post.content | strip_html | number_of_words | append: '.0' | divided_by:site.wpm %}
+      {% assign readtime = post.content | strip_html | number_of_words | append: '.0' | divided_by:site.wpm %}
     {% else %}
       {% assign readtime = post.content | strip_html | number_of_words | append: '.0' | divided_by:180 %}
     {% endif %}
