--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -222,8 +222,8 @@ span + .entry-title {
 }
 .entry-title {
 	font-family: $alt-font;
-	font-style: italic;
-	@include font-size(36,yes,36);
+	font-style: normal;
+	@include font-size(16,yes,36); // size for mobile screens
 	font-weight: 400;
 	line-height: 1;
 	letter-spacing: -3px;
@@ -232,10 +232,10 @@ span + .entry-title {
 		text-decoration: underline;
 	}
 	@include media($medium) {
-		@include font-size(52,yes,54);
+		@include font-size(16,yes,54); // size for tablets
 	}
 	@include media($large) {
-		@include font-size(68,yes,72);
+		@include font-size(16,yes,72); // size for desktop
 	}
 }
 .entry-wrapper {
