--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -2,6 +2,9 @@
 <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = 'dbarobin'; // required: replace example with your forum shortname
+	  var disqus_identifier = 'robinwen';
+      var disqus_title = 'DBA@Robin';
+      var disqus_url = 'http://dbarobin.com';
 
       /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
@@ -16,6 +19,9 @@
 <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
   var disqus_shortname = 'dbarobin'; // required: replace example with your forum shortname
+  var disqus_identifier = 'robinwen';
+  var disqus_title = 'DBA@Robin';
+  var disqus_url = 'http://dbarobin.com';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function () {
