--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,10 +1,7 @@
-<div id="disqus_thread"></div>
+<div id="disqus_thread">
 <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = 'dbarobin'; // required: replace example with your forum shortname
-	  var disqus_identifier = 'robinwen';
-      var disqus_title = 'DBA@Robin';
-      var disqus_url = 'http://dbarobin.com';
 
       /* * * DON'T EDIT BELOW THIS LINE * * */
       (function() {
@@ -19,9 +16,6 @@
 <script type="text/javascript">
   /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
   var disqus_shortname = 'dbarobin'; // required: replace example with your forum shortname
-  var disqus_identifier = 'robinwen';
-  var disqus_title = 'DBA@Robin';
-  var disqus_url = 'http://dbarobin.com';
 
   /* * * DON'T EDIT BELOW THIS LINE * * */
   (function () {
@@ -31,3 +25,4 @@
       (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
   }());
 </script>
+</div>
