--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,4 +1,4 @@
-<div id="disqus_thread">
+<div id="disqus_thread"></div>
 <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
       var disqus_shortname = 'dbarobin'; // required: replace example with your forum shortname
@@ -25,4 +25,3 @@
       (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
   }());
 </script>
-</div>
