--- a/_includes/Copyright_Notice.html
+++ b/_includes/Copyright_Notice.html
@@ -3,21 +3,20 @@
 
   {% if site.defalt_locale == "cn" %}
 
-  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">
-    <img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png">
+  <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">
+    <img src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
   </a>
   <br />
-  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh">署名-非商业性使用-相同方式共享</a>
+  <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">署名-非商业性使用-禁止演绎</a>
 
   {% else %}
 
-  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/">
-    <img src="http://i.creativecommons.org/l/by-nc-sa/3.0/88x31.png">
+  <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">
+    <img src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
   </a>
   <br />
-  <a href="http://creativecommons.org/licenses/by-nc-sa/3.0/s">Attribution-NonCommercial-ShareAlike</a>
+  <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Attribution-NonCommercial-NoDerivs</a>
 
   {% endif %}
 
 </div>
-
