--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<script src="/assets/js/vendor/jquery-1.9.1.min.js"></script>
 <footer class="site-footer">
   <p> &copy; 2015 Robin Wen. All Rights Reserved.</p>
 </footer>
