add google analytics support

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
 <link rel="icon" href="{{site.favicon| prepend:site.baseurl}}">
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="/assets/awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="/assets/js/google_analytics.js">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/zfeed.xml" | prepend: site.url }}" />
 
