--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -172,16 +172,18 @@ a {
  */
 
 blockquote{
-  padding: 0 1em;
+  border-left: 4px solid #dddddd;
+  padding: 0 15px;
+  color: #777777;
   margin: 14px 0;
-  border: 2px dashed #d0dfda;
-  border-radius: 5px;
-  color: $grey-color;
   font-size: 14px;
-  background: #f9f9f9;
 
   &:hover {
     color: #454545;
+  }
+
+  > :first-child {
+    margin-top: 0;
   }
 
   > :last-child {
@@ -194,29 +196,48 @@ blockquote{
 /**
  * Code formatting
  */
-pre,code {
-  font-size: 14px;
-  border-radius: 3px;
-  background-color: $code-backgroud-color;
-  color: $code-font-color;
+pre code {
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+  white-space: pre;
+  border: none;
+  background: transparent; 
 }
 
-code {
-  padding: 1px 5px;
+.highlight pre {
+  background-color: #f8f8f8;
+  border: 1px solid #cccccc;
+  font-size: 13px;
+  line-height: 19px;
+  overflow: auto;
+  padding: 6px 10px;
+  border-radius: 3px; 
 }
 
 pre {
-  padding: 8px 12px;
-  overflow: auto; 
-
-  > code {
-    border: 0;
-    padding-right: 0;
-    padding-left: 0;
-  }
+  background-color: #f8f8f8;
+  border: 1px solid #cccccc;
+  font-size: 13px;
+  line-height: 19px;
+  overflow: auto;
+  padding: 6px 10px;
+  border-radius: 3px; 
 }
 
+pre code, pre tt {
+  background-color: transparent;
+  border: none;
+}
 
+code, tt {
+  margin: 0 2px;
+  padding: 0 5px;
+  white-space: nowrap;
+  border: 1px solid #eaeaea;
+  background-color: #f8f8f8;
+  border-radius: 3px; 
+}
 
 /**
  * Wrapper
