[Theme] Update _base.scss - Update element a(href) to display: block

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,6 +90,7 @@ ul, ol, dl, figure,
  * Images
  */
 img {
+  max-width: 100%;
   vertical-align: left;
 }
 
@@ -137,6 +138,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
+  display: block
   color: $brand-top-color;
   text-decoration: none;
 
