--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -117,6 +117,9 @@ ul, ol {
 }
 
 li {
+  list-style: none;
+  float: left;
+  margin-left: $spacing-unit;
   > ul,
   > ol {
     margin-bottom: 0;
