--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,7 +11,6 @@
 <link rel="icon" href="{{site.favicon| prepend:site.baseurl}}">
 <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
 <link rel="stylesheet" href="/assets/awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="/assets/js/google_analytics.js">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
 
@@ -43,5 +42,6 @@ $(document).ready(function(){
 });
 </script>
 
+{% include google_analytics.js%}
 
 </head>
