[Optimize] Optimize the import way of JavaScripts - Browser rendering: Defer parsing of JavaScript

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,6 +4,6 @@
       <a title="Back To Top"><img src="/images/scrollup.png"/></a>
    </div>
 
-<script src="/assets/js/vendor/jquery-1.9.1.min.js"></script>
-<script src="/assets/js/totop.js"></script>
+<script type="text/javascript" defer="defer" src="/assets/js/vendor/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" defer="defer" src="/assets/js/totop.js"></script>
 </footer>
