[Optimize] Add alt attribute on <img> tags

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="site-footer">
   <p> &copy; 2015 Robin Wen. All Rights Reserved.</p>
    <div id="totop" style="position:fixed;bottom:150px;right:50px;cursor: pointer;">
-      <a title="Back To Top"><img src="/images/scrollup.png"/></a>
+      <a title="Back To Top"><img alt="Scrollup to home page of dbarobin.com" src="/images/scrollup.png"/></a>
    </div>
 
 <script type="text/javascript" defer="defer" src="/assets/js/vendor/jquery-1.9.1.min.js"></script>
