--- a/_includes/Copyright_Notice.html
+++ b/_includes/Copyright_Notice.html
@@ -4,7 +4,7 @@
   {% if site.defalt_locale == "cn" %}
 
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">
-    <img src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
+    <img alt="Copyright Notice" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
   </a>
   <br />
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">署名-非商业性使用-禁止演绎</a>
@@ -12,7 +12,7 @@
   {% else %}
 
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">
-    <img src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
+    <img alt="Copyright Notice" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
   </a>
   <br />
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Attribution-NonCommercial-NoDerivs</a>
