--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="site-footer">
+  <link rel="stylesheet" type="text/css" href="/assets/css/robin.css">
   <p> &copy; 2015 Robin Wen. All Rights Reserved.</p>
-   <div id="totop" style="position:fixed;bottom:150px;right:50px;cursor: pointer;">
+   <div id="totop" class="mytotop">
       <a title="Back To Top"><img alt="Scrollup to home page of dbarobin.com" src="/images/scrollup.png"/></a>
    </div>
 
