--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,5 +29,6 @@ var _hmt = _hmt || [];
   s.parentNode.insertBefore(hm, s);
 })();
 </script>
+<noscript>Your browser doesn't support JavaScript or you have disabled JavaScript!</noscript>
 
 </head>
