[Bug] Fix the external JavaScripts can't be loaded

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="content-language" content="zh">
-<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src https://disqus.com, https://www.baidu.com; connect-src *; img-src *; style-src *;">
+<meta http-equiv="Content-Security-Policy" content="default-src 'none'; script-src *; connect-src *; img-src *; style-src *;">
 <meta name="viewport" content="width=device-width initial-scale=1">
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
