--- a/assets/css/robin.css
+++ b/assets/css/robin.css
@@ -4,3 +4,13 @@
    right: 50px;
    cursor: pointer;
 }
+
+.mylinkedin {
+   border: 0px;
+   height: 15px;
+   width: 80px;
+   position: absolute;
+   margin-left: 160px;
+   margin-top: -20px;
+   vertical-align: baseline;
+}
