--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,9 @@
 <head>
 
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta http-equiv="content-language" content="zh">
-<meta http-equiv="Content-Security-Policy" content="">
+<meta name="X-UA-Compatible" content="IE=edge">
+<meta name="content-language" content="zh">
+<meta name="Content-Security-Policy" content="">
 <meta name="viewport" content="width=device-width initial-scale=1">
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
