[Optimize] Avoid CSS @import - Change to link attribute at head.html

--- a/css/main.scss
+++ b/css/main.scss
@@ -58,5 +58,5 @@ $on-laptop:        800px;
         "_syntax-highlighting-native" // "syntax-highlighting"
 ;
 
-@import url('fonts-open-sans.css');
-
+// Change to link attribute at head.html
+// @import url('fonts-open-sans.css');
