--- a/_includes/Aboutme.html
+++ b/_includes/Aboutme.html
@@ -16,7 +16,7 @@
   <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank">Email</a> /
   {% endif %}
   {% if site.github_username != empty %}
-  <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}" target="_blank">Github</a> /
+  <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}" target="_blank">GitHub</a> /
   {% endif %}
   {% if site.twitter_username != empty %}
   <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}" target="_blank">Twitter</a>
