[Optimize] Set a lang for my page - Ref: http://www.zhihu.com/question/20797118 - Ref: http://stackoverflow.com/questions/1071789/how-to-specify-language-of-website-html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
 
+<html xmlns="http://www.w3.org/1999/xhtml" lang="zh-cmn-Hans" xml:lang="zh-cmn-Hans">
 <meta charset="utf-8">
 <meta name="X-UA-Compatible" content="IE=edge">
 <meta name="content-language" content="zh">
