--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -113,21 +113,19 @@ figcaption {
  */
 ul, ol {
   margin-left: $spacing-unit;
-  margin-bottom: 20px 0;
 }
 
 li {
-  > ul {
-    margin-bottom: 20px 0;
-  }
+  > ul, 
   > ol {
-    margin-bottom: 20px 0;
+    margin-bottom: 20px;
   }
 }
 
 
 
-/**
+
+**
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
@@ -352,9 +350,13 @@ table tr th :last-child, table tr td :last-child { margin-bottom: 0; }
  */
 
 hr{
-  margin-bottom: 30px;
+  display: block;
+  margin: 1em 0;
+  padding: 0;
+  height: 1px;
   border: 0;
-  border-bottom: 1px dotted #ccc;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #fff;
 }
 
 cite{ 
