--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -350,11 +350,9 @@ table tr th :last-child, table tr td :last-child { margin-bottom: 0; }
  */
 
 hr{
-  margin: 1px 0;
-  padding: 0;
+  margin-bottom: 30px;
   border: 0;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px dotted #ccc;
 }
 
 cite{ 
