[Theme] Change ol style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -113,14 +113,13 @@ figcaption {
  */
 ul, ol {
   margin-left: $spacing-unit;
-  margin: 20px 0px;
+  margin-bottom: 1.25em;
 }
 
 li {
   > ul,
   > ol {
     margin-bottom: 0;
-    margin: 20px 0px;
   }
 }
 
