--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -147,15 +147,24 @@ a {
 
   &:hover {
     color: #669900; //$hover-color;
-    text-decoration: underline;
+    text-decoration: none;
   }
-}
 
+  &:focus {
+      outline: thin dotted;
+      color: lighten($brand-top-color, 20%);
+  }   
+
+  &:hover,
+  &:active {
+      outline: 0;
+  }   
+}
 
 .post-content a{
   color: $brand-color;    
   text-decoration: none;  
-  border-bottom: 1px dotted;
+  border-bottom: 0px dotted;
   &:visited {             
     color: darken($brand-color, 25%);
   }                       
@@ -361,5 +370,5 @@ hr{
 
 cite{ 
   font-style: italic;
-  text-decoration: underline;
+  text-decoration: none;
 }
