--- a/_includes/Copyright_Notice.html
+++ b/_includes/Copyright_Notice.html
@@ -1,7 +1,7 @@
 <div class="sidebar-module"> <!-- sidebar-module-inset">-->
   <h4>{{ site.locales[site.default_locale].Copyright_Notice }}</h4>
 
-  {% if site.defalt_locale == "cn" %}
+  {% if site.default_locale == "cn" %}
 
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">
     <img alt="Copyright Notice" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
