--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -170,6 +170,10 @@
  */
 .post-header {
   margin-bottom: $spacing-unit;
+  time{
+      margin-left: 0px;
+      font-style: normal;
+   }
 }
 
 .post-title {
