--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,5 +6,6 @@
    </div>
 
 <script type="text/javascript" defer="defer" src="/assets/js/vendor/jquery-1.9.1.min.js"></script>
+<script type="text/javascript" defer="defer" src="//dn-lbstatics.qbox.me/lbservice/busuanzi/1.0/busuanzi.mini.js"/></script>
 <script type="text/javascript" defer="defer" src="/assets/js/totop.js"></script>
 </footer>
