--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 ---
+<!-- Optimize, add schema meta info -->
 <div class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
