--- a/assets/css/robin.css
+++ b/assets/css/robin.css
@@ -1,3 +1,4 @@
+/* Custom back to top CSS style  */
 .mytotop {
    position: fixed;
    bottom: 150px;
@@ -5,6 +6,7 @@
    cursor: pointer;
 }
 
+/* Custom linkedin CSS style  */
 .mylinkedin {
    border: 0px;
    height: 15px;
