--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,8 +8,6 @@ dl, dd, ol, ul, figure {
   padding: 0;
 }
 
-
-
 /**
  * Basic styling
  */
@@ -23,8 +21,6 @@ body {
   -webkit-text-size-adjust: 100%;
 }
 
-
-
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
@@ -35,9 +31,25 @@ ul, ol, dl, figure,
   margin-bottom: $spacing-unit / 2;
 }
 
+/**
+* Paragraph
+*/
+p {
+  font-family: "Open Sans", "Helvetica", "Arial", "Hiragino Sans GB", "Noto Sans CJK SC", "Heiti SC", "Microsoft YaHei", "WenQuanYi Microhei", serif;
+  margin: 20px 0;
+  line-height: 1.7em;
+  margin-bottom: 1.7em;
+  word-break: break-all;
+}
 
-
-
+/**
+* Title
+*/
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Lucida Grande", "Helvetica Neue", "Arial", "Hiragino Sans GB", "Noto Sans CJK SC", "Heiti SC", "Microsoft YaHei", "WenQuanYi Microhei", sans-serif;
+  margin-top: .7em;
+  margin-bottom: 0.2em;
+}
 
 /**
  * Set main page style
@@ -93,8 +105,6 @@ img {
   vertical-align: left;
 }
 
-
-
 /**
  * Figures
  */
@@ -106,24 +116,22 @@ figcaption {
   font-size: $small-font-size;
 }
 
-
-
 /**
  * Lists
  */
 ul, ol {
   margin-left: $spacing-unit;
   margin-bottom: 1.25em;
+  font-family: "Open Sans", "Helvetica", "Arial", "Hiragino Sans GB", "Noto Sans CJK SC", "Heiti SC", "Microsoft YaHei", "WenQuanYi Microhei", serif;
 }
 
 li {
+  font-family: "Open Sans", "Helvetica", "Arial", "Hiragino Sans GB", "Noto Sans CJK SC", "Heiti SC", "Microsoft YaHei", "WenQuanYi Microhei", serif;
   > ul,
   > ol {
     margin-bottom: 0;
   }
 }
-
-
 
 /**
  * Headings
@@ -131,8 +139,6 @@ li {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
 }
-
-
 
 /**
  * Links
