[Enhance] Optimize webpage display of MySQL tag

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,11 @@ layout: default
     <p class="post-meta">
     {{ site.locales[site.default_locale].PostedInCategories }}
     {% for cat in page.categories %}
-    <a href="{{site.baseurl}}/categories/#{{ cat }}">{{ cat | capitalize}}</a>&nbsp;
+    {% if cat == 'mysql' %}
+      <a href="{{site.baseurl}}/categories/#{{ cat }}">MySQL</a>&nbsp;
+    {% else %}
+      <a href="{{site.baseurl}}/categories/#{{ cat }}">{{ cat | capitalize}}</a>&nbsp;
+    {% endif %}
     {% endfor %} 
     {% if page.tags != empty %}
     {{ site.locales[site.default_locale].Taggedwith }}
