[Enhance] Add Search support via jekyll-lunr-js-search, PS: Developing

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,7 @@
 <div class="col-sm-2">
 {% include Aboutme.html %}
 {% include Copyright_Notice.html %}
+{% include Search.html %}
 {% include Recent_Posts.html %}
 {% include Categories.html %}
 {% include Blogroll.html %}
