--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,6 +29,7 @@
 <link rel="stylesheet" type="text/css" href="/assets/css/fonts-open-sans.css">
 <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
+<script type="text/javascript" defer="defer" src="/assets/js/search.min.js"></script>
 
 <script>
 var _hmt = _hmt || [];
