--- a/_includes/Search.html
+++ b/_includes/Search.html
@@ -1,6 +1,6 @@
 <div class="sidebar-module">
   <h4>{{ site.locales[site.default_locale].Search }}</h4>
-  <form method="get" class="searchform" action="http://dbarobin.com/">
+  <form method="get" class="searchform" action="/index.html">
       <input type="text" class="field" name="q" placeholder="Search" autocomplete="off" value="" />
   </form>
 </div>
@@ -8,7 +8,7 @@
 <script type="text/javascript">
   $(function() {
     $('#search-query').lunrSearch({
-      index:    '/search.json',
+      index:    '/js/index.json',
       results:  '#search-results',
       entries:  '.entries',
       template: '#search-results-template'
@@ -21,16 +21,3 @@
   <div class="entries">
   </div>
 </section>
-
-{% raw %}
-<script id="search-results-template" type="text/mustache">
-  {{#entries}}
-    <article>
-      <h3>
-        {{#date}}<small><time datetime="{{pubdate}}" pubdate>{{displaydate}}</time></small>{{/date}}
-        <a href="{{url}}">{{title}}</a>
-      </h3>
-    </article>
-  {{/entries}}
-</script>
-{% endraw %}
