[Optimize] Explain the purpose of each form field

--- a/_includes/Search.html
+++ b/_includes/Search.html
@@ -1,7 +1,7 @@
 <div class="sidebar-module">
   <h4>{{ site.locales[site.default_locale].Search }}</h4>
   <form method="get" class="searchform" action="/index.html">
-      <input type="text" class="field" name="q" placeholder="Search" autocomplete="off" value="" />
+      <input title="Search for posts" type="text" class="field" name="q" placeholder="Search" autocomplete="off" value="" />
   </form>
 </div>
 
