--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -387,7 +387,7 @@ cite{
 .searchform .submit {
     width:                  28px;
     height:                 28px;
-    background:             url(http://taosay.net/wp-content/themes/montezuma/images/searchicon.png) 0 -5px no-repeat;
+    background:             url(http://dbarobin.com/images/searchicon.png) 0 -5px no-repeat;
     overflow:               hidden;
     border:                 none;
     margin-left:            3px;
@@ -417,5 +417,5 @@ cite{
 .widget .searchform .field {
     width:                  100%;
     max-width:              300px;
-    background:             url(http://taosay.net/wp-content/themes/montezuma/images/searchicon.png) right center no-repeat;
+    background:             url(http://dbarobin.com/images/searchicon.png) right center no-repeat;
 }
