--- a/_includes/Copyright_Notice.html
+++ b/_includes/Copyright_Notice.html
@@ -4,7 +4,7 @@
   {% if site.default_locale == "cn" %}
 
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">
-    <img alt="Copyright Notice" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
+    <img alt="Copyright Notice" src="http://dbarobin.com/images/by-nc-nd-3.0-88x31.png">
   </a>
   <br />
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.zh">署名-非商业性使用-禁止演绎</a>
