--- a/_includes/Copyright_Notice.html
+++ b/_includes/Copyright_Notice.html
@@ -12,7 +12,7 @@
   {% else %}
 
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">
-    <img alt="Copyright Notice" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png">
+    <img alt="Copyright Notice" src="http://dbarobin.com/images/by-nc-nd-3.0-88x31.png">
   </a>
   <br />
   <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Attribution-NonCommercial-NoDerivs</a>
