[Optimize] Add mutiple missing http headers

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,15 @@
 <meta name="X-UA-Compatible" content="IE=edge">
 <meta name="content-language" content="zh">
 <meta name="Content-Security-Policy" content="">
+<meta name="Content-Type" content="text/html;charset=utf-8">
+<meta name="Strict-Transport-Security" content="max-age=31536000; includeSubDomains">
+<meta name="X-Content-Type-Options" content="nosniff">
+<meta name="X-XSS-Protection" content="1; mode=block">
+<meta name="X-Frame-Options" content="sameorigin">
+<meta name="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta name="Pragma" content="no-cache">
+<meta name="Expires" content="-1">
+<meta name="X-Permitted-Cross-Domain-Policies" content="master-only">
 <meta name="viewport" content="width=device-width initial-scale=1">
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
