[Enhance] Update busuanzi, which is a page view counter to 2.0

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,8 +23,8 @@ layout: default
     {% endfor %}
     {% endif %}
     {{ site.locales[site.default_locale].PostDate }}{{ page.date | date: "%b %-d, %Y" }}. 
-    <span id="container_page_counter">
-      Viewd <span id="value_page_counter"></span> times.
+    <span id="busuanzi_container_page_pv">
+      Viewd <span id="busuanzi_value_page_pv"></span> times.
     </span>
     </p>
   </header>
