--- a/_includes/Aboutme.html
+++ b/_includes/Aboutme.html
@@ -10,16 +10,16 @@
 
   {% if site.ShowContactInfo == "True" %}
 
-  You can contact me via:
+  Contact me via:&nbsp;
 
   {% if site.email != empty %}
-  <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank">Email</a> /
+     <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank"><i class="fa fa-envelope"></i></a> &nbsp;
   {% endif %}
   {% if site.github_username != empty %}
-  <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}" target="_blank">GitHub</a> /
+     <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
   {% endif %}
   {% if site.twitter_username != empty %}
-  <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}" target="_blank">Twitter</a>
+    <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}" target="_blank"><i class="fa fa-twitter"></i></a>
   {% endif %}
 
   {% endif %}
