[Bug] Fix bug of Google search didn't work properly Ref: http://git.io/vfF2P

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,4 +41,6 @@ var _hmt = _hmt || [];
 </script>
 <noscript>Your browser doesn't support JavaScript or you have disabled JavaScript!</noscript>
 
+{% include google_search.js %}
+
 </head>
