--- a/_includes/Google_Search.html
+++ b/_includes/Google_Search.html
@@ -1,7 +1,6 @@
 <div class="sidebar-module">
   <h4>{{ site.locales[site.default_locale].Google_Search }}</h4>
-  <form class="searchform" action="http://www.google.com/search" method="GET" target="_blank" >
-    <input type="hidden" name="q" value="site:{{site.url}}" />
-    <input title="Search for posts" class="field" type="text" placeholder="Search" name="q" results="0" autocomplete="off" spellcheck="false" />
+  <form class="searchform" onsubmit="search_google()" >
+    <input id="google-search" title="Search for posts" class="field" type="text" placeholder="Search" results="0" autocomplete="off" spellcheck="false" />
   </form>
 </div>
