[Enhance] Add WeChat image and WeChat donate feature

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,4 +6,6 @@
 {% include Categories.html %}
 {% include Blogroll.html %}
 {% include Archives.html %}
+{% include WeChat_DBTalk.html %}
+{% include WeChat_Donate.html %}
 </div>
