[Enhance] Add 360 webscan support

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="site-footer">
   <link rel="stylesheet" type="text/css" href="/assets/css/robin.css">
   <p> &copy; 2015 Robin Wen. All Rights Reserved.</p>
+  <a href="http://webscan.360.cn/index/checkwebsite/url/dbarobin.com" name="ec281f91d51d1308c35253525feae078" >360网站安全检测平台</a>
    <div id="totop" class="mytotop">
       <a title="Back To Top"><img alt="Scrollup to home page of dbarobin.com" src="/images/scrollup.png"/></a>
    </div>
