--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,15 @@
 <meta name="Content-Security-Policy" content="">
 <meta name="viewport" content="width=device-width initial-scale=1">
 
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+<title>
+   {% if page.title %}
+      {{ page.title }} | {{ site.title }}
+   {% elsif post.title %}
+      {{ post.title }} | {{ site.title }}
+   {% else %}
+      {{ site.title }} | {{ site.tagline }}
+   {% endif %}
+</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 <meta name="keywords" content="{{ site.keywords }}">
 <meta property="og:title" content="DBA@Robin, MySQL DBA" />
