--- a/_includes/Categories.html
+++ b/_includes/Categories.html
@@ -3,6 +3,8 @@
     {% for cat in site.categories %}
         {% if cat[0] == 'mysql' %}
             <li><a href="{{ site.baseurl }}/categories/#{{ cat[0] }}" title="{{ cat[0] }}" rel="{{ cat[1].size }}">MySQL ({{ cat[1].size }})</a></li>
+        {% elsif cat[0] == 'nosql' %}
+            <li><a href="{{ site.baseurl }}/categories/#{{ cat[0] }}" title="{{ cat[0] }}" rel="{{ cat[1].size }}">NoSQL ({{ cat[1].size }})</a></li>
         {% else %}
             <li><a href="{{ site.baseurl }}/categories/#{{ cat[0] }}" title="{{ cat[0] }}" rel="{{ cat[1].size }}">{{ cat[0] | capitalize}} ({{ cat[1].size }})</a></li>
        {% endif %}
