--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,8 @@ layout: default
     {% for cat in page.categories %}
     {% if cat == 'mysql' %}
       <a href="{{site.baseurl}}/categories/#{{ cat }}">MySQL</a>&nbsp;
+    {% elsif cat == 'nosql' %}
+      <a href="{{site.baseurl}}/categories/#{{ cat }}">NoSQL</a>&nbsp;
     {% else %}
       <a href="{{site.baseurl}}/categories/#{{ cat }}">{{ cat | capitalize}}</a>&nbsp;
     {% endif %}
