[Enhance] Change baidu analysis to cnzz

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,6 +38,7 @@
 <link rel="canonical" href="{{ page.url | replace:'index.html','' |  prepend: site.url }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.url }}" />
 
+<!--
 <script>
 var _hmt = _hmt || [];
 (function() {
@@ -48,6 +49,13 @@ var _hmt = _hmt || [];
 })();
 </script>
 <noscript>Your browser doesn't support JavaScript or you have disabled JavaScript!</noscript>
+-->
+
+<span style=”display:none”>
+	<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1256776130'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s4.cnzz.com/z_stat.php%3Fid%3D1256776130' type='text/javascript'%3E%3C/script%3E"));
+	</script>
+	<noscript>Your browser doesn't support JavaScript or you have disabled JavaScript!</noscript>
+</span>
 
 {% include google_search.js %}
 
