--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,9 +31,9 @@
 <meta name="twitter:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}">
 
 <link rel="icon" href="{{site.favicon| prepend:site.baseurl}}">
-<link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-<link rel="stylesheet" href="/assets/awesome/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="/assets/css/robin.css">
+<link rel="stylesheet" href="{{ "https://dbarobin.com/css/main.css" | prepend: site.baseurl }}">
+<link rel="stylesheet" href="https://dbarobin.com/assets/awesome/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="https://dbarobin.com/assets/css/robin.css">
 <!--
 <link rel="stylesheet" type="text/css" href="/assets/css/fonts-open-sans.css">
 -->
