[Theme] Add footnotes css style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -419,3 +419,12 @@ cite{
     max-width:              300px;
     background:             url(http://dbarobin.com/images/searchicon.png) right center no-repeat;
 }
+
+/**
+ * Footnotes.
+ */
+
+footnotes {
+  line-height: 10px;
+  margin-bottom: 10px;
+}
