[Enhanced] Add statistics support via GoStats

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -69,6 +69,18 @@ Force using https.
 </div>
 -->
 
+<!-- GoStats JavaScript Based Code -->
+<div style="display:none">
+<script type="text/javascript" src="https://ssl.gostats.com/js/counter.js"></script>
+<script type="text/javascript">_gos='monster.gostats.cn';_goa=482888;
+_got=5;_goi=1;_gol='流量统计分析';_GoStatsRun();</script>
+<noscript><a target="_blank" title="流量统计分析" 
+href="http://gostats.cn"><img alt="流量统计分析" 
+src="https://ssl.gostats.com/bin/count/a_482888/t_5/i_1/ssl_monster.gostats.cn/counter.png" 
+style="border-width:0" /></a></noscript>
+</div>
+<!-- End GoStats JavaScript Based Code -->
+
 {% include google_search.js %}
 
 </head>
