[Enhanced] Update commentit js url

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,7 +51,7 @@ layout: default
       var commentit = document.createElement('script');
       commentit.type = 'text/javascript';
       commentit.async = true;
-      commentit.src = 'https://commentit.io/static/embed/dist/commentit.js';
+      commentit.src = 'https://dbarobin.com/assets/js/commentit.js';
       (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(commentit);
   })();
 </script>
