--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -183,7 +183,7 @@
 }
 
 .post-content {
-  p{ padding:20px 0; }
+  p { padding:$spacing-unit/5 0; }
   margin-bottom: $spacing-unit;
   font-size: 16px;
 
