--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,13 +10,7 @@ layout: default
     <p class="post-meta">
     {{ site.locales[site.default_locale].PostedInCategories }}
     {% for cat in page.categories %}
-    {% if cat == 'mysql' %}
-      <a href="{{site.baseurl}}/categories/#{{ cat }}">MySQL</a>&nbsp;
-    {% elsif cat == 'nosql' %}
-      <a href="{{site.baseurl}}/categories/#{{ cat }}">NoSQL</a>&nbsp;
-    {% else %}
-      <a href="{{site.baseurl}}/categories/#{{ cat }}">{{ cat | capitalize}}</a>
-    {% endif %}
+	<a href="{{site.baseurl}}/categories/#{{ cat }}">{{cat}}</a>{% unless page.categories.last == cat %}, {% endunless %}
     {% endfor %}
     {% if page.tags != empty %}
     {{ site.locales[site.default_locale].Taggedwith }}
