--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
 <footer class="site-footer">
   <link rel="stylesheet" type="text/css" href="https://dbarobin.com/assets/css/robin.css">
+  <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank"><i class="fa fa-envelope"></i></a> &nbsp;
+  <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
+  <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}" target="_blank"><i class="fa fa-twitter"></i></a> &nbsp;
+  <a href="https://dbarobin.com/feed.xml" title="RSS"><i class="fa fa-rss"></i></a>
   <p> &copy; 2017 Robin Wen. All Rights Reserved.</p>
    <div id="totop" class="mytotop">
       <a title="Back To Top"><img alt="Scrollup to home page of dbarobin.com" src="https://dbarobin.com/images/scrollup.png"/></a>
