--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,6 +32,8 @@ layout: default
 
 </div>
 
+{% include dashang.html%}
+
 <noscript>Please enable JavaScript to view the comment form powered by <a href="https://commentit.io/">Comm(ent|it)</a></noscript>
 <div id="commentit"></div>
 <script type="text/javascript">
