--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
   <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank"><i class="fa fa-envelope"></i></a> &nbsp;
   <a href="https://github.com/{{site.github_username}}" title="GithubID: {{site.github_username}}" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
   <a href="https://twitter.com/{{site.twitter_username}}" title="TwitterID: {{site.twitter_username}}" target="_blank"><i class="fa fa-twitter"></i></a> &nbsp;
-  <a href="https://www.instagram.com/dbarobin" title="InstagramID: dbarobin"><i class="fa fa-instagram"></i></a> &nbsp;
+  <a href="https://www.instagram.com/dbarobin" title="InstagramID: dbarobin" target="_blank"><i class="fa fa-instagram"></i></a> &nbsp;
   <!-- <a href="https://telegram.me/dbarobin" title="TelegramID: dbarobin" target="_blank"><i class="fa fa-telegram"></i></a> &nbsp; -->
   <a href="https://dbarobin.com/feed.xml" title="RSS"><i class="fa fa-rss"></i></a>
   <p> &copy; 2017 Robin Wen. All Rights Reserved.</p>
