--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: default
     <p class="post-meta">
     {{ site.locales[site.default_locale].PostedInCategories }}
     {% for cat in page.categories %}
-	<a href="{{site.baseurl}}/categories/#{{ cat }}">{{cat}}</a>{% unless page.categories.last == cat %}, {% endunless %}
+         {{cat}}{% unless page.categories.last == cat %}, {% endunless %}
     {% endfor %}
     {% if page.tags != empty %}
     {{ site.locales[site.default_locale].Taggedwith }}
