[Feature] Remove Google Search

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -81,6 +81,6 @@ style="border-width:0" /></a></noscript>
 </div>
 <!-- End GoStats JavaScript Based Code -->
 
-<!-- {% include google_search.js %} -->
+{% include google_search.js %}
 
 </head>
