[Feature] Add GA

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,6 +59,7 @@
 </script>
 
 <!-- GoStats JavaScript Based Code -->
+<!--
 <div style="display:none">
 <script type="text/javascript" src="https://ssl.gostats.com/js/counter.js"></script>
 <script type="text/javascript">_gos='monster.gostats.cn';_goa=482888;
@@ -68,7 +69,18 @@ href="http://gostats.cn"><img alt="流量统计分析"
 src="https://ssl.gostats.com/bin/count/a_482888/t_5/i_1/ssl_monster.gostats.cn/counter.png" 
 style="border-width:0" /></a></noscript>
 </div>
+-->
 <!-- End GoStats JavaScript Based Code -->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-57297247-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-57297247-1');
+</script>
 
 {% include google_search.js %}
 
