[Feature] Add keybase logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
   <a href="https://facebook.com/dbarobin" title="Facebook ID: dbarobin" target="_blank"><i class="fa fa-facebook"></i></a> &nbsp;
   <a href="https://steemit.com/@robinwen" title="Steemit ID: robinwen" target="_blank"><i class="fa fa-steemit"></i></a> &nbsp;
   <a href="https://github.com/{{site.github_username}}" title="Github ID: {{site.github_username}}" target="_blank"><i class="fa fa-github"></i></a> &nbsp;
+  <a href="https://keybase.io/robinwen" title="Keybase ID: robinwen" target="_blank"><i class="fa fa-keybase"></i></a> &nbsp;
   <a href="https://www.linkedin.com/in/dbarobin" title="LinkedIn ID: dbarobin" target="_blank"><i class="fa fa-linkedin"></i></a> &nbsp;
   <a href="https://www.instagram.com/vrwio" title="Instagram ID: vrwio" target="_blank"><i class="fa fa-instagram"></i></a> &nbsp;
   <a href="https://dbarobin.com/feed.xml" title="RSS"><i class="fa fa-rss"></i></a>
