[Theme] Change sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,8 @@
 <div class="col-sm-2">
 {% include Aboutme.html %}
 {% include Google_Search.html %}
+{% include Recent_Posts.html %}
+{% include Categories.html %}
 {% include Archives.html %}
 {% include Blogroll.html %}
 </div>
