--- a/_includes/head.html
+++ b/_includes/head.html
@@ -58,6 +58,10 @@
   });
 </script>
 
+<script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
+
 <!-- GoStats JavaScript Based Code -->
 <!--
 <div style="display:none">
