[Theme] Update footer, add telegram

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer class="site-footer">
   <link rel="stylesheet" type="text/css" href="https://dbarobin.com/assets/css/robin.css">
   <a href="mailto:{{site.email}}" title="mailto: {{site.email}}" target="_blank"><i class="fa fa-envelope"></i></a> &nbsp;
+  <a href="https://t.me/{{site.telegram_name}}" title="Telegram: {{site.telegram_username}}" target="_blank"><i class="fa fa-telegram"></i></a> &nbsp;
   <a href="https://twitter.com/{{site.twitter_username}}" title="Twitter ID: {{site.twitter_username}}" target="_blank"><i class="fa fa-twitter"></i></a> &nbsp;
   <a href="https://facebook.com/dbarobin" title="Facebook ID: dbarobin" target="_blank"><i class="fa fa-facebook"></i></a> &nbsp;
   <a href="https://steemit.com/@robinwen" title="Steemit ID: robinwen" target="_blank"><i class="fa fa-steemit"></i></a> &nbsp;
