[Theme] Change sidebar, remove blogroll and add tags

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,5 +4,5 @@
 {% include Recent_Posts.html %}
 {% include Categories.html %}
 {% include Archives.html %}
-{% include Blogroll.html %}
+{% include Tags.html %}
 </div>
