[Theme] Change tag style

--- a/_includes/Tags.html
+++ b/_includes/Tags.html
@@ -3,7 +3,7 @@
     <ul class="tags-box">
         {% for tag in site.tags %}
             {% if tag[1].size > 2 %}
-                <a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}<span class="size"> {{ tag[1].size }}</span></a> &nbsp;
+                <a href="{{ site.baseurl }}/tags/#{{ tag[0] }}" title="{{ tag[0] }}" rel="{{ tag[1].size }}">{{ tag[0] }}<span class="size"> {{ tag[1].size }}</span></a>
             {% endif %}
         {% endfor %}
     </ul>
